removed redundant file from previous push

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bf983b01",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9585cf",
    "metadata": {},
    "source": [
     "# Nonlocal Full Module Test with 2D reaction diffusion equation"
@@ -26,8 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "edaad741",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c4d09020",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e53bd1bb",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +148,6 @@
     "#       We split each dimension into K (mostly) equally sized subdomains, where K is a parameter. \n",
     "#       There will be a total of K^ndim subdomains \n",
     "    bounds = []\n",
-    "    lengths = []\n",
-    "    created = []\n",
     "#     -1 to adjust for the last dimension, which indicates feature.\n",
     "    for i in np.arange(np.array(spatial_grid).ndim-1):\n",
     "#         does spatio-temporal grid have to have the same number of points in each spatial dimension?\n",
@@ -165,11 +158,9 @@
     "            print(\"Warning: too many subdomains created in axis\", i)\n",
     "        \n",
     "        subdomain_length = length//K[i]\n",
-    "\n",
     "        remain = length % K[i]\n",
-    "        size = [subdomain_length] * K[i]\n",
-    "        for j in np.arange(remain):\n",
-    "            size[j] += 1\n",
+    "        size = np.zeros(K[i]) + subdomain_length\n",
+    "        size[:remain] += 1\n",
     "        bound = np.cumsum(size)\n",
     "        bounds.append(bound)\n",
     "    return bounds\n",
@@ -413,7 +404,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e33adf",
    "metadata": {},
    "source": [
     "# Data matrix is U, spatiotemporal_grid is XYT"
@@ -421,8 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "46a2c0ec",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,50 +454,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "23f15916",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n samples =  4096\n",
-      "n features =  1\n",
-      "[array([32, 64]), array([32, 64])]\n",
-      "Progress:  0 / 16\n",
-      "setup time = 7.915496826171875e-05\n",
-      "The loop will be ran 409600 times\n",
-      "Progress:  1 / 16\n",
-      "Time to compute last iteration: 28.923117876052856\n",
-      "setup time = 0.000446319580078125\n",
-      "The loop will be ran 409600 times\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-59f1e8ca5eae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msample_test_space\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXYT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-60fb46a7aaf8>\u001b[0m in \u001b[0;36msample_test_space\u001b[0;34m(spatiotemporal_grid, x)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m                 \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m                 \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_theta_nonloc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspatiotemporal_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkprime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubdomain_bounds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m                 \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;31m#                 monitor progress\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-59389abae593>\u001b[0m in \u001b[0;36mget_theta_nonloc\u001b[0;34m(X, spatiotemporal_grid, j, k, kprime, bounds, K)\u001b[0m\n\u001b[1;32m    257\u001b[0m         \u001b[0mcoefficient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindicator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthis_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubdomain_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 259\u001b[0;31m         \u001b[0mintegral\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_integral\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspatiotemporal_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_ind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubdomain_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkprime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m         \u001b[0mtheta_nonloc_p\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoefficient\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mintegral\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-59389abae593>\u001b[0m in \u001b[0;36msubdomain_iterator\u001b[0;34m(index, bounds, K)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mboundary\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthat\u001b[0m \u001b[0msubdomain\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstandard\u001b[0m \u001b[0;32mnonlocal\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     '''\n\u001b[0;32m---> 54\u001b[0;31m     \u001b[0mnd_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnd_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m     \u001b[0mbound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnd_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-59389abae593>\u001b[0m in \u001b[0;36mnd_iterator\u001b[0;34m(index, K)\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mnd\u001b[0m \u001b[0mindex\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0mD\u001b[0m \u001b[0mindex\u001b[0m \u001b[0mto\u001b[0m \u001b[0mbe\u001b[0m \u001b[0;34m\"index\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     '''\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0mnd_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0mdividor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0mremaining_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "sample_test_space(XYT, U)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "d6395d4e",
    "metadata": {},
    "source": [
     "# Optimization:\n",
@@ -517,8 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "79932287",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,17 +481,9 @@
     "        vector Theta^nonloc_p\n",
     "    '''\n",
     "    \n",
-    "#     print('j', j, 'k', k, 'kp', kprime)\n",
-    "    \n",
     "#     get number and space and time points\n",
     "    num_t = np.shape(spatiotemporal_grid)[-2]\n",
     "    num_x = np.prod(np.shape(spatiotemporal_grid)[:-2])\n",
-    "    \n",
-    "# #     filter t list\n",
-    "#     t_filter = [0]*(len(np.shape(spatiotemporal_grid))-2)\n",
-    "#     t_filter.append(slice(None))\n",
-    "#     t_filter.append(-1)\n",
-    "#     t = spatiotemporal_grid[tuple(t_filter)]\n",
     "    \n",
     "#     construct shape of x\n",
     "    x_shape = np.shape(spatiotemporal_grid)[:-2]\n",
@@ -569,8 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "79b26e3d",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,8 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d5cb6bd4",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -621,11 +556,11 @@
       "n samples =  4096\n",
       "n features =  1\n",
       "[array([32, 64]), array([32, 64])]\n",
-      "setup time = 0.0002448558807373047\n",
+      "setup time = 7.843971252441406e-05\n",
       "The loop will be ran 409600 times\n",
-      "old time = 27.400820016860962\n",
+      "old time = 27.37360954284668\n",
       "The loop will be ran 409600 times\n",
-      "new time = 20.915543794631958\n",
+      "new time = 20.74826979637146\n",
       "0.0\n"
      ]
     }
@@ -635,9 +570,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimization Progress:\n",
+    "Original speed for a get_theta_nonloc run: 27s\n",
+    "Original speed for a get_theta_nonloc_o run: 21s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.zeros(5)+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[:2] +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3., 3., 2., 2., 2.])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e417caea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -659,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
