--- a/12_weakform_SINDy_examples.ipynb
+++ b/12_weakform_SINDy_examples.ipynb
@@ -1583,9 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1617,7 +1615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1631,7 +1629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.1"
   },
   "toc": {
    "base_numbering": 1,
@@ -1682,5 +1680,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
