--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,7 @@
     "        size = np.zeros(K[i]) + subdomain_length\n",
     "        size[:remain] += 1\n",
     "        bound = np.cumsum(size)\n",
+    "        bound = [int(s) for s in bound]\n",
     "        bounds.append(bound)\n",
     "    return bounds\n",
     "\n",
@@ -403,6 +404,129 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def compute_integral_o(X, spatiotemporal_grid, t, j, endpts, debug):\n",
+    "    '''\n",
+    "    Parameters: \n",
+    "\n",
+    "        X: data grid\n",
+    "        spatiotemporal_grid: The spatiotemporal_grid that contains information about spatial and time data points.\n",
+    "        t_ind: index of the time point at which the integral happens.\n",
+    "        j: feature index\n",
+    "        endpts: n x 2 array \n",
+    "            the first column is the left endpoints of the subdomain's each of the n dimensions in terms of index,\n",
+    "            second column is right endpoint of each of the subdomain's each of the n dimensions in terms of index\n",
+    "\n",
+    "    return:\n",
+    "        nd integral within a subdomain\n",
+    "    '''  \n",
+    "\n",
+    "#     Since all the spatiotemporal_grid contains indication, time and spatial dimensions, and there must be 1 time dimension\n",
+    "#     the number of spatial is then given as following\n",
+    "    grid_ndim = len(np.shape(spatiotemporal_grid))-2\n",
+    "\n",
+    "# find weights\n",
+    "#     All the 1D weights will be stored in a 2D matrix as cols\n",
+    "    s = time.time()\n",
+    "    weights = []\n",
+    "    for i in np.arange(grid_ndim):\n",
+    "#         +2 to account for the time and indication dimension\n",
+    "        index = [0]*(grid_ndim+2)\n",
+    "        index[i] = slice(None)\n",
+    "        index[-1] = i\n",
+    "#         Time is always the second to last dimension, which is filtered here\n",
+    "        index[-2] = t\n",
+    "\n",
+    "#         we now get the 1D grid by filtering by the index created\n",
+    "        this_dim = spatiotemporal_grid[tuple(index)]\n",
+    "\n",
+    "        weight = get_1D_weight(this_dim, endpts[i])\n",
+    "        weights.append(weight)\n",
+    "    if debug:\n",
+    "        print(\"weight time:\", time.time()-s)\n",
+    "        numpy.save(\"testingWeights\", weights)\n",
+    "    \n",
+    "    s = time.time()\n",
+    "    W_F = functools.reduce(np.multiply.outer, weights)\n",
+    "    if debug:\n",
+    "        print(\"get full weight:\", time.time()-s)\n",
+    "\n",
+    "# We now construct F, the spatial grid within a subdomain\n",
+    "    s = time.time()\n",
+    "    X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
+    "    F = filterX(X, j, endpts, t)\n",
+    "    if debug:\n",
+    "        print(\"get F:\", time.time()-s)\n",
+    "    \n",
+    "    s = time.time()\n",
+    "    result = np.sum(np.multiply(W_F, F))\n",
+    "    if debug:\n",
+    "        print(\"final multiply:\", time.time()-s)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def get_theta_nonloc_o(X, spatiotemporal_grid, j, k, kprime, bounds, K):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "        spatiotemporal_grid: The spatiotemporal_grid that contains information about spatial and time data points.\n",
+    "        j: the index of u that we are looking for\n",
+    "        k: the index of subdomain to be used by the indicator function\n",
+    "        kprime: the index of the subdomain to be used as boundary of integral\n",
+    "        bounds: boundary of each subdomain correspond to each dimension in terms of indexing. \n",
+    "\n",
+    "    return: \n",
+    "        vector Theta^nonloc_p\n",
+    "    '''\n",
+    "    \n",
+    "    s = time.time()\n",
+    "#     get number and space and time points\n",
+    "    num_t = np.shape(spatiotemporal_grid)[-2]\n",
+    "    num_x = np.prod(np.shape(spatiotemporal_grid)[:-2])\n",
+    "    \n",
+    "#     construct shape of x\n",
+    "    x_shape = np.shape(spatiotemporal_grid)[:-2]\n",
+    "    \n",
+    "    print('The loop will be ran', num_t*num_x, 'times')\n",
+    "    \n",
+    "    coeff = np.zeros(num_t*num_x)\n",
+    "    integral = np.zeros(num_t*num_x)\n",
+    "    \n",
+    "#     print(\"total setup time:\", time.time()-s)\n",
+    "    \n",
+    "    s_T = time.time()\n",
+    "    for i in np.arange(num_x):\n",
+    "        \n",
+    "        s = time.time()\n",
+    "        this_x = spatial_iterator(i, spatiotemporal_grid, x_shape)\n",
+    "        coeff[i*num_t:(i+1)*num_t] = [indicator(this_x, subdomain_iterator(k, bounds, K))]*num_t\n",
+    "#         if i == 0:\n",
+    "#             print(\"loop setup time:\", time.time()-s)\n",
+    "\n",
+    "        s = time.time()\n",
+    "        for t in np.arange(num_t):\n",
+    "            if i == 0 and t == 0:\n",
+    "                integral[i*num_t + t] = compute_integral_o(X, spatiotemporal_grid, t, j, subdomain_iterator(kprime, bounds, K), True)\n",
+    "            else:\n",
+    "                integral[i*num_t + t] = compute_integral_o(X, spatiotemporal_grid, t, j, subdomain_iterator(kprime, bounds, K), False)\n",
+    "#         if i == 0:\n",
+    "#             print(\"integral time:\", time.time()-s)\n",
+    "        \n",
+    "#     print(\"total loop time:\", time.time()-s_T)\n",
+    "            \n",
+    "    s = time.time()\n",
+    "    theta_nonloc_p = coeff * integral\n",
+    "#     print(\"multiply time:\", time.time()-s)\n",
+    "\n",
+    "    return theta_nonloc_p"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -411,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,174 +578,39 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Optimization:\n",
-    "To optimize coefficient calculation, we separate the time loop and space loop to avoid repeated computation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# need to figure out kprime and how to store the endpoints for this entire function\n",
-    "def get_theta_nonloc_o(X, spatiotemporal_grid, j, k, kprime, bounds, K):\n",
-    "    '''\n",
-    "    Parameters:\n",
-    "        spatiotemporal_grid: The spatiotemporal_grid that contains information about spatial and time data points.\n",
-    "        j: the index of u that we are looking for\n",
-    "        k: the index of subdomain to be used by the indicator function\n",
-    "        kprime: the index of the subdomain to be used as boundary of integral\n",
-    "        bounds: boundary of each subdomain correspond to each dimension in terms of indexing. \n",
-    "\n",
-    "    return: \n",
-    "        vector Theta^nonloc_p\n",
-    "    '''\n",
-    "    \n",
-    "#     get number and space and time points\n",
-    "    num_t = np.shape(spatiotemporal_grid)[-2]\n",
-    "    num_x = np.prod(np.shape(spatiotemporal_grid)[:-2])\n",
-    "    \n",
-    "#     construct shape of x\n",
-    "    x_shape = np.shape(spatiotemporal_grid)[:-2]\n",
-    "    \n",
-    "    print('The loop will be ran', num_t*num_x, 'times')\n",
-    "    \n",
-    "    coeff = np.zeros(num_t*num_x)\n",
-    "    integral = np.zeros(num_t*num_x)\n",
-    "\n",
-    "    for i in np.arange(num_x):\n",
-    "        this_x = spatial_iterator(i, spatiotemporal_grid, x_shape)\n",
-    "        coeff[i*num_t:(i+1)*num_t] = [indicator(this_x, subdomain_iterator(k, bounds, K))]*num_t\n",
-    "        for t in np.arange(num_t):\n",
-    "            integral[i*num_t + t] = compute_integral(X, spatiotemporal_grid, t, j, subdomain_iterator(kprime, bounds, K))\n",
-    "            \n",
-    "    theta_nonloc_p = coeff * integral\n",
-    "\n",
-    "    return theta_nonloc_p"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def optimization_space(spatiotemporal_grid, x):\n",
-    "    spatial_grid = spatiotemporal_grid[..., 0, :-1]\n",
-    "    dims = spatial_grid.shape[:-1]\n",
-    "    grid_ndim = len(dims)\n",
-    "    \n",
-    "#     number of space points sampled\n",
-    "    n_samples_full = np.prod(np.shape(x)[:grid_ndim])\n",
-    "#     number of features at each space point\n",
-    "    n_features = np.shape(x)[-1]-1\n",
-    "    \n",
-    "    print('n samples = ', n_samples_full)\n",
-    "    print('n features = ', n_features)\n",
-    "\n",
-    "    K = [2]*grid_ndim\n",
-    "    subdomain_bounds = setup_subdomains(spatial_grid, K)\n",
-    "    \n",
-    "    print(subdomain_bounds)\n",
-    "    \n",
-    "    res = []\n",
-    "    \n",
-    "    tot_iter = n_features * np.prod(K) * np.prod(K)\n",
-    "    s1 = time.time()\n",
-    "    res.append(get_theta_nonloc(x, spatiotemporal_grid, 1, 1, 1, subdomain_bounds, K))\n",
-    "    print('old time =', time.time()-s1)\n",
-    "    \n",
-    "    s2 = time.time()\n",
-    "    res.append(get_theta_nonloc_o(x, spatiotemporal_grid, 1, 1, 1, subdomain_bounds, K))\n",
-    "    print('new time =', time.time()-s2)\n",
-    "    \n",
-    "    print(np.linalg.norm(res[1]-res[0]))\n",
-    "\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n samples =  4096\n",
-      "n features =  1\n",
-      "[array([32, 64]), array([32, 64])]\n",
-      "setup time = 7.843971252441406e-05\n",
+      "setup time = 4.839897155761719e-05\n",
       "The loop will be ran 409600 times\n",
-      "old time = 27.37360954284668\n",
+      "23.067115306854248\n",
       "The loop will be ran 409600 times\n",
-      "new time = 20.74826979637146\n",
-      "0.0\n"
+      "weight time: 2.1696090698242188e-05\n",
+      "get full weight: 1.2159347534179688e-05\n",
+      "get F: 1.1920928955078125e-05\n",
+      "final multiply: 1.5974044799804688e-05\n",
+      "16.350744009017944\n"
      ]
     }
    ],
    "source": [
-    "a = optimization_space(XYT, U)"
+    "spatial_grid = XYT[..., 0, :-1]\n",
+    "dims = spatial_grid.shape[:-1]\n",
+    "grid_ndim = len(dims)\n",
+    "K = [2]*grid_ndim\n",
+    "subdomain_bounds = setup_subdomains(spatial_grid, K)\n",
+    "s = time.time()\n",
+    "get_theta_nonloc(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
+    "print(time.time() - s)\n",
+    "s = time.time()\n",
+    "get_theta_nonloc_o(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
+    "print(time.time() - s)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Optimization Progress:\n",
-    "Original speed for a get_theta_nonloc run: 27s\n",
-    "Original speed for a get_theta_nonloc_o run: 21s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.zeros(5)+2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[:2] +=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3., 3., 2., 2., 2.])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
