remove unused method, simplify integral computation

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -293,7 +293,7 @@
     "    W_F = get_full_weight(weights)\n",
     "\n",
     "# We now construct F, the spatial grid within a subdomain\n",
-    "    X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
+    "#     X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
     "    F = filterX(X, j, endpts, t)\n",
     "\n",
     "    return np.sum(np.multiply(W_F, F))\n",
@@ -450,7 +450,6 @@
     "        weights.append(weight)\n",
     "    if debug:\n",
     "        print(\"weight time:\", time.time()-s)\n",
-    "        numpy.save(\"testingWeights\", weights)\n",
     "    \n",
     "    s = time.time()\n",
     "    W_F = functools.reduce(np.multiply.outer, weights)\n",
@@ -459,7 +458,7 @@
     "\n",
     "# We now construct F, the spatial grid within a subdomain\n",
     "    s = time.time()\n",
-    "    X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
+    "#     X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
     "    F = filterX(X, j, endpts, t)\n",
     "    if debug:\n",
     "        print(\"get F:\", time.time()-s)\n",
@@ -527,6 +526,139 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def compute_integral_o2(X, spatiotemporal_grid, t, j, endpts, debug):\n",
+    "    '''\n",
+    "    Parameters: \n",
+    "\n",
+    "        X: data grid\n",
+    "        spatiotemporal_grid: The spatiotemporal_grid that contains information about spatial and time data points.\n",
+    "        t_ind: index of the time point at which the integral happens.\n",
+    "        j: feature index\n",
+    "        endpts: n x 2 array \n",
+    "            the first column is the left endpoints of the subdomain's each of the n dimensions in terms of index,\n",
+    "            second column is right endpoint of each of the subdomain's each of the n dimensions in terms of index\n",
+    "\n",
+    "    return:\n",
+    "        nd integral within a subdomain\n",
+    "    '''  \n",
+    "\n",
+    "#     Since all the spatiotemporal_grid contains indication, time and spatial dimensions, and there must be 1 time dimension\n",
+    "#     the number of spatial is then given as following\n",
+    "    grid_ndim = len(np.shape(spatiotemporal_grid))-2\n",
+    "\n",
+    "# find weights\n",
+    "#     All the 1D weights will be stored in a 2D matrix as cols\n",
+    "    s = time.time()        \n",
+    "    index = [0]*(grid_ndim+2)\n",
+    "    index[0] = slice(None)\n",
+    "    index[-1] = 0\n",
+    "#     Time is always the second to last dimension, which is filtered here\n",
+    "    index[-2] = t\n",
+    "\n",
+    "#     we now get the 1D grid by filtering by the index created\n",
+    "    this_dim = spatiotemporal_grid[tuple(index)]\n",
+    "\n",
+    "    ndim = grid_ndim\n",
+    "    W_F = np.array(get_1D_weight(this_dim, endpts[0]))\n",
+    "    for w in np.arange(ndim-1)+1:\n",
+    "        index2 = [0]*(grid_ndim+2)\n",
+    "        index2[w] = slice(None)\n",
+    "        index2[-1] = w\n",
+    "#         Time is always the second to last dimension, which is filtered here\n",
+    "        index2[-2] = t\n",
+    "\n",
+    "#         we now get the 1D grid by filtering by the index created\n",
+    "        this_dim = spatiotemporal_grid[tuple(index2)]\n",
+    "        \n",
+    "        index = [slice(None)]*(w+1)\n",
+    "        index[-1] = np.newaxis\n",
+    "        W_F = W_F[tuple(index)] * np.array(get_1D_weight(this_dim, endpts[w]))\n",
+    "    if debug:\n",
+    "        print(\"weight time:\", time.time()-s)\n",
+    "\n",
+    "# We now construct F, the spatial grid within a subdomain\n",
+    "    s = time.time()\n",
+    "#     X_F = retrieve_data_mat(spatiotemporal_grid, X)\n",
+    "    index = [0]*len(np.shape(X))\n",
+    "    for i in range(np.shape(bound)[0]):\n",
+    "        index[i] = slice(bound[i][0], bound[i][1])\n",
+    "    index[-2] = t_ind\n",
+    "    index[-1] = j\n",
+    "    F = X[tuple(index)]\n",
+    "    \n",
+    "    if debug:\n",
+    "        print(\"get F:\", time.time()-s)\n",
+    "    \n",
+    "    s = time.time()\n",
+    "    result = np.sum(np.multiply(W_F, F))\n",
+    "    if debug:\n",
+    "        print(\"final multiply:\", time.time()-s)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def get_theta_nonloc_o2(X, spatiotemporal_grid, j, k, kprime, bounds, K):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "        spatiotemporal_grid: The spatiotemporal_grid that contains information about spatial and time data points.\n",
+    "        j: the index of u that we are looking for\n",
+    "        k: the index of subdomain to be used by the indicator function\n",
+    "        kprime: the index of the subdomain to be used as boundary of integral\n",
+    "        bounds: boundary of each subdomain correspond to each dimension in terms of indexing. \n",
+    "\n",
+    "    return: \n",
+    "        vector Theta^nonloc_p\n",
+    "    '''\n",
+    "    \n",
+    "    s = time.time()\n",
+    "#     get number and space and time points\n",
+    "    num_t = np.shape(spatiotemporal_grid)[-2]\n",
+    "    num_x = np.prod(np.shape(spatiotemporal_grid)[:-2])\n",
+    "    \n",
+    "#     construct shape of x\n",
+    "    x_shape = np.shape(spatiotemporal_grid)[:-2]\n",
+    "    \n",
+    "    print('The loop will be ran', num_t*num_x, 'times')\n",
+    "    \n",
+    "    coeff = np.zeros(num_t*num_x)\n",
+    "    integral = np.zeros(num_t*num_x)\n",
+    "    \n",
+    "#     print(\"total setup time:\", time.time()-s)\n",
+    "    \n",
+    "    s_T = time.time()\n",
+    "    for i in np.arange(num_x):\n",
+    "        \n",
+    "        s = time.time()\n",
+    "        this_x = spatial_iterator(i, spatiotemporal_grid, x_shape)\n",
+    "        coeff[i*num_t:(i+1)*num_t] = [indicator(this_x, subdomain_iterator(k, bounds, K))]*num_t\n",
+    "#         if i == 0:\n",
+    "#             print(\"loop setup time:\", time.time()-s)\n",
+    "\n",
+    "        s = time.time()\n",
+    "        for t in np.arange(num_t):\n",
+    "            if i == 0 and t == 0:\n",
+    "                integral[i*num_t + t] = compute_integral_o(X, spatiotemporal_grid, t, j, subdomain_iterator(kprime, bounds, K), True)\n",
+    "            else:\n",
+    "                integral[i*num_t + t] = compute_integral_o(X, spatiotemporal_grid, t, j, subdomain_iterator(kprime, bounds, K), False)\n",
+    "#         if i == 0:\n",
+    "#             print(\"integral time:\", time.time()-s)\n",
+    "        \n",
+    "#     print(\"total loop time:\", time.time()-s_T)\n",
+    "            \n",
+    "    s = time.time()\n",
+    "    theta_nonloc_p = coeff * integral\n",
+    "#     print(\"multiply time:\", time.time()-s)\n",
+    "\n",
+    "    return theta_nonloc_p"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -535,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,22 +711,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "setup time = 4.839897155761719e-05\n",
+      "setup time = 0.00020241737365722656\n",
       "The loop will be ran 409600 times\n",
-      "23.067115306854248\n",
+      "22.609145641326904\n",
       "The loop will be ran 409600 times\n",
-      "weight time: 2.1696090698242188e-05\n",
-      "get full weight: 1.2159347534179688e-05\n",
-      "get F: 1.1920928955078125e-05\n",
-      "final multiply: 1.5974044799804688e-05\n",
-      "16.350744009017944\n"
+      "weight time: 2.384185791015625e-05\n",
+      "get full weight: 9.059906005859375e-06\n",
+      "get F: 5.245208740234375e-06\n",
+      "final multiply: 1.52587890625e-05\n",
+      "15.834168672561646\n"
      ]
     }
    ],
@@ -604,13 +736,66 @@
     "grid_ndim = len(dims)\n",
     "K = [2]*grid_ndim\n",
     "subdomain_bounds = setup_subdomains(spatial_grid, K)\n",
+    "\n",
     "s = time.time()\n",
-    "get_theta_nonloc(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
+    "a = get_theta_nonloc(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
     "print(time.time() - s)\n",
+    "\n",
     "s = time.time()\n",
-    "get_theta_nonloc_o(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
+    "b = get_theta_nonloc_o(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
     "print(time.time() - s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The loop will be ran 409600 times\n",
+      "weight time: 2.8848648071289062e-05\n",
+      "get full weight: 1.049041748046875e-05\n",
+      "get F: 5.7220458984375e-06\n",
+      "final multiply: 1.9550323486328125e-05\n",
+      "15.669506072998047\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = time.time()\n",
+    "c = get_theta_nonloc_o2(U, XYT, 1, 1, 1, subdomain_bounds, K)\n",
+    "print(time.time() - s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(abs(a-c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
