--- a/In Progress/Test.ipynb
+++ b/In Progress/Test.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "12b5ffa3",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
     "    return theta_nonloc_p\n",
     "\n",
     "def sample_test_space(spatiotemporal_grid, x):\n",
-    "    \n",
+    "    spatial_grid = XYT[..., 0, :-1]\n",
     "    dims = spatial_grid.shape[:-1]\n",
     "    grid_ndim = len(dims)\n",
     "    \n",
@@ -393,9 +393,8 @@
     "    n_features = np.shape(x)[-1]-1\n",
     "\n",
     "    K = [2]*grid_ndim\n",
+    "    print(K)\n",
     "    subdomain_bounds = setup_subdomains(spatial_grid, K)\n",
-    "    \n",
-    "    print(subdomain_bounds)\n",
     "    \n",
     "    res = []\n",
     "    \n",
@@ -421,65 +420,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "232ab2ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = sample_test_space(XYT, U)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "6ed85875",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.006796360015869141\n"
+      "[2, 2]\n",
+      "[[32, 64], [32, 64]]\n"
      ]
     }
    ],
    "source": [
-    "spatial_grid = XYT[..., 0, :-1]\n",
-    "dims = spatial_grid.shape[:-1]\n",
-    "grid_ndim = len(dims)\n",
-    "K = [2]*grid_ndim\n",
-    "subdomain_bounds = setup_subdomains(spatial_grid, K)\n",
-    "\n",
-    "s = time.time()\n",
-    "b = get_theta_nonloc(U, XYT, 0, 0, 2, subdomain_bounds, K)\n",
-    "print(time.time()-s)"
+    "a = sample_test_space(XYT, U)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "0c47f106",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "(16, 409600)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm(b-a[2])"
+    "np.shape(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b387985c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 64, 100, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(XYT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "034c0abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 64, 100, 2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(U)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
