Reshape nonlocal part

--- a/In Progress/Test.ipynb
+++ b/In Progress/Test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1b8c8729",
+   "id": "87638b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfd178f",
+   "id": "a3d53356",
    "metadata": {},
    "source": [
     "# Nonlocal Full Module Test with 2D reaction diffusion equation"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7e4173c5",
+   "id": "a0449e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ed06c5d6",
+   "id": "bc0bc3a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "12b5ffa3",
+   "id": "efc17706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,6 @@
     "        vector Theta^nonloc_p\n",
     "    '''\n",
     "    spatio_grid = spatiotemporal_grid[..., 0, :-1]\n",
-    "    s = time.time()\n",
     "#     get number and space and time points\n",
     "    num_t = np.shape(spatiotemporal_grid)[-2]\n",
     "    num_x = np.prod(np.shape(spatiotemporal_grid)[:-2])\n",
@@ -340,20 +339,19 @@
     "#     construct shape of x\n",
     "    x_shape = np.shape(spatiotemporal_grid)[:-2]\n",
     "    \n",
-    "    coeff = np.zeros(num_t*num_x)\n",
-    "    integral = np.zeros(num_t*num_x)\n",
     "    \n",
-    "#     x loop\n",
+    "    integral = np.zeros((num_x, num_t))\n",
+    "    \n",
+    "#     get coeff\n",
+    "    coeff = np.zeros((num_x, num_t))\n",
     "    coeff_bounds = subdomain_iterator(k, bounds, K)\n",
     "    x_flat = np.zeros((2, 4096))\n",
     "    x_flat[0, :] = np.reshape(spatio_grid[:, :, 0], 4096)\n",
     "    x_flat[1, :] = np.reshape(spatio_grid[:, :, 1], 4096)\n",
     "    \n",
-    "    out = indicator(x_flat.T, coeff_bounds)\n",
-    "    coeff = np.kron(out, [1]*num_t)\n",
+    "    coeff = indicator(x_flat.T, coeff_bounds)\n",
     "\n",
-    "#    t loop\n",
-    "    s_T = time.time()\n",
+    "#    get integral\n",
     "    integral_bounds = subdomain_iterator(kprime, bounds, K)\n",
     "    for t in np.arange(num_t):\n",
     "        # find weights\n",
@@ -375,10 +373,11 @@
     "        W_F = get_full_weight(weights)\n",
     "        F = filterX(X, j, integral_bounds, t)\n",
     "\n",
-    "        integral[t::num_t] = np.sum(np.multiply(W_F, F))\n",
+    "        integral[:, t] = np.sum(np.multiply(W_F, F))\n",
+    "    np.shape(integral)\n",
     "        \n",
-    "    s_M = time.time()\n",
-    "    theta_nonloc_p = coeff * integral\n",
+    "#     final product\n",
+    "    theta_nonloc_p = (coeff * integral.T).T\n",
     "\n",
     "    return theta_nonloc_p\n",
     "\n",
@@ -393,7 +392,6 @@
     "    n_features = np.shape(x)[-1]-1\n",
     "\n",
     "    K = [2]*grid_ndim\n",
-    "    print(K)\n",
     "    subdomain_bounds = setup_subdomains(spatial_grid, K)\n",
     "    \n",
     "    res = []\n",
@@ -403,16 +401,13 @@
     "    for j in np.arange(n_features):\n",
     "        for k in np.arange(np.prod(K)):\n",
     "            for kprime in np.arange(np.prod(K)):\n",
-    "                \n",
-    "                start = time.time()\n",
     "                res.append(get_theta_nonloc(x, spatiotemporal_grid, j, k, kprime, subdomain_bounds, K))\n",
-    "                end = time.time()-start\n",
     "    return res"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21197d50",
+   "id": "2e09e687",
    "metadata": {},
    "source": [
     "# Data matrix is U, spatiotemporal_grid is XYT"
@@ -421,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "232ab2ef",
+   "id": "7c2013b3",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +424,22 @@
      "output_type": "stream",
      "text": [
       "[2, 2]\n",
-      "[[32, 64], [32, 64]]\n"
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n",
+      "(4096,)\n"
      ]
     }
    ],
@@ -440,13 +450,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0c47f106",
+   "id": "18798ada",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16, 409600)"
+       "(16, 4096, 100)"
       ]
      },
      "execution_count": 6,
@@ -461,7 +471,28 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b387985c",
+   "id": "30fc3296",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 64, 100, 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "384e77d3",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +501,7 @@
        "(64, 64, 100, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,29 +512,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "034c0abb",
+   "execution_count": null,
+   "id": "a266841b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(64, 64, 100, 2)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(U)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -517,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
